2017-09-11  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.showAllResults function.

2017-09-10  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define genericListener.listeners.requestShowAllResults function.

	* tryXpath/scripts/try_xpath_functions.js: 
	Define createDetailTableHeader function.
	Define appendDetailRows function.
	
	* tryXpath/pages/show_all_results.js:
	Create this file.
	Define showAllResults function. This is not finished.

	* tryXpath/pages/show_all_results.html:
	Create this file.

2017-09-09  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js: 
	Fix error message. "The context is either Document nor Element."
	-> "The context is neither Document nor Element."
	Define getOwnerDocument function.
	Modify execExpr function to receive opts.document argument.

	* tryXpath/background/try_xpath_background.js:
	Define genericListener.listeners.focusItemInTab function.

2017-09-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Define restoreAllClass function.
	Define genericListener.listeners.restoreAllClass function.
	Rename genericListener.listeners.restoreAllClass
	-> genericListener.listeners.resetStyle
	Define genericListener.listeners.setStyle function.
	Modify genericListener.listeners.focusItem function to use
	scrollIntoView.
	Define focusItem fucntion.
	Define genericListener.listeners.focusContextItem function.
	
2017-09-07  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Add event listener(window "unload").

	* tryXpath/background/try_xpath_background.js:
	Define popupState variable.
	Define genericListener.listeners.storePopupState function.
	Define genericListener.listeners.requestRestorePopupState function.

	* tryXpath/scripts/try_xpath_content.js:
	Change genericListener.listeners.execute function.