@@ -1,5 +1,11 @@
 2017-09-11  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/background/try_xpath_background.js: 
+	Define genericListener.listeners.loadResults function.
+	
+	* tryXpath/pages/show_all_results.js: 
+	Modify event listener(window "load").
+	
 	* tryXpath/background/try_xpath_background.js:
 	Define genericListener.listeners.showAllResults function.
 
